# serialplotter

./: Cargo.toml  Readme.md
src/: app.rs  frame_history.rs  lib.rs  main.rs  value_parsing.rs
src/app/: value_history.rs
