[package]
name = "serialplotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["persistence"] }
egui = { version = "0.21.0", features = ["persistence"] }
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serialport = "4.2.0"
tracing = "0.1.37"
#tracing-egui = { path = "../tracing-utils/libs/tracing-egui" }
tracing-egui = { git = "https://github.com/jakob-ledermann/tracing-utils.git", branch = "main"}
tracing-memory = { git = "https://github.com/jakob-ledermann/tracing-utils.git", branch = "main"}
#tracing-memory = { path = "../tracing-utils/libs/tracing-memory" }
puffin = {version = "0.15.0", optional = true}
puffin_egui = {version = "0.21.0", optional = true}
crossbeam = "0.8.2"
gilrs = "0.10.2"

[features]
default = []
profiling = ["dep:puffin", "dep:puffin_egui"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm
debug = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
